# hive-memory

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  README.md  docker-compose.yml  eslint.config.js  nixpacks.toml  package-lock.json  package.json  railway.json  tsconfig.json
.well-known/: x402.json
deploy/: .env.example  cortex.service  cron.sh  setup.sh
docs/: DESIGN.md  RESEARCH.md  acl-decisions.md  acl-usecases.md  claude-md-template.md  codex-md-template.md  company-second-brain-spec.md  cursor-md-template.md  quickstart.md  setup.md
native/: Cargo.toml  package-lock.json  package.json
native/src/: embedding.rs  lib.rs  vecdb.rs
scripts/: verify-deploy.sh  worker-capture.sh  worker-inject.sh
src/: auth.ts  cli.ts  embed.ts  index.ts  js-embed.ts  request-context.ts  store.ts  tools.ts  types.ts
tests/: acl-integration.test.ts  acl-label-e2e.test.ts  acl-policy.test.ts  acl-source-inherit.test.ts  acl-wiring.test.ts  advisor.test.ts  agent-identity.test.ts  agentic-retrieval.test.ts  audit-db.test.ts  auth.test.ts  calendar-connector.test.ts  cdc.test.ts  checkpoint.test.ts  cli.test.ts  community.test.ts  compaction.test.ts  connector-registry.test.ts  connector-state-machine.test.ts  dashboard-api.test.ts  data-lifecycle.test.ts  decision-extractor.test.ts  enrichment-stages.test.ts  enrichment.test.ts  entity-resolution.test.ts  fts5-sanitize.test.ts  gateway.test.ts  hive-index.test.ts  hive-migrate.test.ts  hive-search.test.ts  hive-store.test.ts  hybrid-search.test.ts  lifecycle.test.ts  lock.test.ts  (+20 more)
(+195 files in other folders)
